--- a/app/index.html
+++ b/app/index.html
@@ -38,10 +38,10 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-              <li><a ng-href="#/registration">Registration</a></li>
+              <li ng-curent-menu-item="/"><a href="#/">Home</a></li>
+              <li ng-curent-menu-item="/about"><a ng-href="#/about">About</a></li>
+              <li ng-curent-menu-item="/"><a ng-href="#/">Contact</a></li>
+              <li ng-curent-menu-item="/registration"><a ng-href="#/registration">Registration</a></li>
             </ul>
           </div>
         </div>
@@ -91,6 +91,12 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/registration.js"></script>
         <script src="scripts/directives/validatepassword.js"></script>
+        <script src="scripts/directives/customdirective.js"></script>
+        <script src="scripts/directives/ngcurentmenuitem.js"></script>
+        <script src="scripts/directives/ngcustompagination.js"></script>
+        <script src="scripts/services/user.js"></script>
+        <script src="scripts/controllers/registraion2.js"></script>
+        <script src="scripts/controllers/registraion3.js"></script>
         <!-- endbuild -->
 </body>
 </html>
